# StretchVAL

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  dev.bat  main.py  pyproject.toml  requirements.txt  run.bat
backend/: api.py  constants.py  display.py  log.py  paths.py  prefs.py  profiles.py
backend/valorant/: __init__.py  config.py  process.py  settings.py
installer/: StretchVAL.iss  build_installer.bat
tests/: test_display.py  test_profiles.py  test_settings.py
ui/: index.html
ui/css/: style.css
ui/js/: apply.js  core.js  main.js  monitors.js  profiles.js  wizard.js
